fix: chef section mobile text

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -744,7 +744,7 @@ h6 {
   .chef-info {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: initial;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
   }
@@ -756,7 +756,7 @@ h6 {
 }
 
 .chef-info p {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: 200;
   text-align: justify;
   margin: 0 4rem;
@@ -767,7 +767,7 @@ h6 {
     text-align: center;
     grid-area: 1 / 1 / 2 / 2;
     grid-area: 2 / 1 / 3 / 2;
-    margin: auto;
+    margin: 1.5rem auto;
     width: 22rem;
   }
 }
@@ -785,7 +785,6 @@ h6 {
 @media (max-width: 768px) {
   .chef-of-the-week .container {
     margin: 0 1rem;
-    margin-top: 4rem;
   }
 
   .chef-of-the-week .container h2 {
